# parascope

./: .dockerignore  .env.example  .geminiignore  .gitignore  404.html  GEMINI.md  LICENSE  README.md  SCENARIOS.md  SPECIFICATIONS.tsv  SPECIFICATIONS.tsv.table.json  TODO.md  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  index.html  package.json  postgres-backup.sql  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml
assets/css/: styles.5a382ada.css
assets/js/: 009f1e98.0edffee2.js  01021950.4e988e18.js  0e384e19.90398080.js  14eb3368.749474c8.js  17896441.f6f81a7f.js  1c9fba1d.329f8128.js  251.7fc92e04.js  (+23 more)
backend/: Dockerfile  Dockerfile.prod  pyproject.toml
backend/resources/: LICENSE.txt
backend/resources/presets/Examples/: aerodynamic_drag.yaml  dynamic_pressure.yaml  material_selection.yaml  rocket_equation.yaml  ssto_feasibility.yaml
backend/scripts/: 20251223_224850_remove_units_from_nodes.py  20260209_cleanup_redundant_fields.py  20260209_fix_version_tags_in_snapshots.py  add_default_version_id.py  cleanup_old_locks_table.py  migrate_constant_values_to_string.py  migrate_lut_to_nested_values.py  migrate_number_to_any.py  migrate_parameter_to_constant.py
backend/src/: main.py
backend/src/api/: attachments.py  auth.py  calculate.py  genai.py  locks.py  sheets.py  sweep.py
backend/src/core/: ai_providers.py  auth.py  calculation_service.py  config.py  database.py  exceptions.py  execution.py  generator.py  graph.py  import_export.py  runtime.py  script_base.py  seed.py  units.py  utils.py
backend/src/core/templates/: body.jinja2  definitions.jinja2  execution.jinja2  script.jinja2
backend/src/models/: sheet.py
backend/src/schemas/: lock.py  sheet.py  sweep.py
backend/tests/: conftest.py  test_nested_reuse.py  test_options.py  test_sheets.py  test_simulation.py
backend/tests/api/: test_attachments.py  test_auth.py  test_calculate.py  test_description_version.py  test_genai.py  test_locks.py  test_sheets.py  test_sweep.py  test_timeout.py
backend/tests/core/: test_import_export.py  test_utils.py
docs/: docusaurus.config.ts  pnpm-lock.yaml
e2e/: package-lock.json  package.json  playwright.config.ts
frontend/: .dockerignore  .rete-patch  Dockerfile  Dockerfile.prod  biome.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
markdown-page/: index.html
(+264 files in other folders)
